--- a/index.html
+++ b/index.html
@@ -214,15 +214,23 @@
     ];
 
     // Funções utilitárias para Local Storage
+
+    // Salva a lista de cartas do usuário no localStorage (chave 'cartas')
     function salvarCartas(cartas) {
       localStorage.setItem('cartas', JSON.stringify(cartas));
     }
+
+    // Carrega a lista de cartas do usuário do localStorage (chave 'cartas')
     function carregarCartas() {
       return JSON.parse(localStorage.getItem('cartas')) || [];
     }
+
+    // Salva o carrinho no localStorage (chave 'carrinho')
     function salvarCarrinho(carrinho) {
       localStorage.setItem('carrinho', JSON.stringify(carrinho));
     }
+
+    // Carrega o carrinho do localStorage (chave 'carrinho')
     function carregarCarrinho() {
       return JSON.parse(localStorage.getItem('carrinho')) || [];
     }
